--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "awesomeapp",
+  "homepage": "https://msm17b041.github.io/todolist",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -67,6 +68,8 @@
     "workbox-webpack-plugin": "5.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
     "test": "node scripts/test.js"
